--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sefailyasoz/react-carousel": "^1.1.1",
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
+    "carousel-react-rcdev": "^0.0.5",
     "jwt-decode": "^3.1.2",
     "next": "13.0.0",
     "nookies": "^2.5.2",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.6.4",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.6.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-touch-carousel": "^0.10.2",
     "sass": "^1.55.0"
   },
   "devDependencies": {
